--- a/index.html
+++ b/index.html
@@ -10,7 +10,15 @@
     <main>
         <H1>Penny Flip Game</H1>
         <div>
-            <div>Penny Image Display, Button Controls, and Status Message</div>
+            <div>
+            <img id="penny-image" src="./assets/images/penny-heads.jpg" alt="penny image">
+            <!-- Penny Image Display, Button Controls, and Status Message -->
+            </div>
+            <div class="controls">
+            <button id="flip">Flip the Coin!</button>
+            <button id="clear">Clear the Scoreboard</button>
+
+            </div>
             <hr>
             <div>
                 <h2>Scoreboard</h2>
