all elements added to html, all button functionality added

--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
         <div>
             <div>
             <img id="penny-image" src="./assets/images/penny-heads.jpg" alt="penny image">
-            <!-- Penny Image Display, Button Controls, and Status Message -->
             </div>
             <div class="controls">
             <button id="flip">Flip the Coin!</button>
             <button id="clear">Clear the Scoreboard</button>
-
+            </div>
+            <hr>
+            <div class="message-container">
+            <h3>Let's Get Rolling!</h3>
             </div>
             <hr>
             <div>
