added functionality to change displayed text to reflect flip result

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </div>
             <hr>
             <div class="message-container">
-            <h3>Let's Get Rolling!</h3>
+            <h3 id="message">Let's Get Rolling!</h3>
             </div>
             <hr>
             <div>
